doc: atualiza documentação
